--- a/src/app/product-lists/product-lists.component.html
+++ b/src/app/product-lists/product-lists.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container py-4">
     <div class="row">
         <div class="col-lg-3  col-md-4 col-sm-6 col-12 mb-4" *ngFor="let list of getProductList let i = index">
             <div class="card text-center" >
